examples/test/testpolicy14442.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14442
  namespace: namespace386
spec:
  podSelector:
    matchLabels:
      key43: value32
      key9: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value46
          key41: value23
          key47: value46
      podSelector:
        matchLabels:
          key42: value11
          key37: value10
          key38: value4
